Bug 76088 - Crash while typing in GVim
Summary: Crash while typing in GVim
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-12 19:38 UTC by Francisco Lopes
Modified: 2014-03-13 20:58 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Link to crash and log files (118 bytes, text/plain)
2014-03-13 05:22 UTC, Francisco Lopes
no flags Details

Description Francisco Lopes 2014-03-12 19:38:01 UTC
I'm using xorg-edgers PPA and recently on Ubuntu 13.10 and while I edit in GVim 7.4.131 the Xorg Server is crashing and I go to Logon screen.

I've noticed this is happening when I'm in Vim Insert mode and I click CAPS-LOCK which here is mapped to ESC key. Just upon releasing it crashes all the time. Console Vim doesn't suffer from same problem.
Comment 1 Francisco Lopes 2014-03-12 19:38:47 UTC
I'm with latest PPA updates
Comment 2 Francisco Lopes 2014-03-12 19:40:54 UTC
Sorry, better description is that I'm coding some C file, and the crash happens after I enter the ; character, and then, go to normal mode with ESC.
Comment 3 Francisco Lopes 2014-03-12 19:51:55 UTC
Better description, the plugin https://github.com/Valloric/YouCompleteMe must also be installed...

I've noticed that disabling this plugin Xorg doesn't crash.

With that plugin, editing a C file, declaring a variable, pressing ; and then ESC twice ocasionates the crash.
Comment 4 Michel Dänzer 2014-03-13 03:12:09 UTC
Please attach the Xorg.0.log file and, if possible, a gdb backtrace corresponding to the crash.
Comment 5 Francisco Lopes 2014-03-13 05:22:07 UTC
Created attachment 95684 [details]
Link to crash and log files
Comment 6 Chris Wilson 2014-03-13 07:34:58 UTC
There's no symbolic stackdump, so please try:

addr2line -i -e /usr/lib/xorg/modules/drivers/intel_drv.so 0xcbfb6

but it looks just like irregular memory corruption.
Comment 7 Chris Wilson 2014-03-13 08:56:04 UTC
commit 5d8ded0dd671fbcbd212e06afbea88a7a56a8f0d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Mar 13 08:51:29 2014 +0000

    sna: Nullify extra fill.ops
    
    I forgot that the initial memset(&fill, 0, sizeof(fill)) was no longer
    performed and we rely on explicit initialisation during the setup, so
    add the missing fields.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=76088
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 8 Francisco Lopes 2014-03-13 20:58:15 UTC
Thank you, PPA was updated today and GVim stopped crashing the machine.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.